--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+  curl -H 'X-Api-Key:'MNJumTqMuNY0igarIiSXmJBHSmFPcL0FajFPRD0a'https://developer.nps.gov/api/v1/parks?parkCode=acad'
   <title>HikeME</title>
 </head>
 <body>
