First NPS Commit part 2

--- a/index.html
+++ b/index.html
@@ -105,5 +105,6 @@
     </div>
 
     <script src="/assets/js/weatherScript.js"></script>
+    <script src="./assets/js/NPSScript.js"></script>
 </body>
 </html>
