--- a/index.html
+++ b/index.html
@@ -8,21 +8,22 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
   <!-- curl -H 'X-Api-Key:'MNJumTqMuNY0igarIiSXmJBHSmFPcL0FajFPRD0a'https://developer.nps.gov/api/v1/parks?parkCode=acad' -->
   <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="icon" type="image/png" href="./assets/images/HikeMeIcon.png">
   <title>HikeME</title>
 </head>
 
 <body>
-  <h1 class="column has-background-success has-text-weight-bold is-size-1 has-text-centered has-text-white">HikeME</h1>
-  <div class="columns">
-    <div class="column is-two-fifths has-background-primary has-text-centered is-size-3">
-      Weather
+    <h1 class="column has-background-success has-text-weight-bold is-size-1 has-text-centered has-text-white">✨ HikeME ✨</h1>
+  <div class="columns is-mobile has-text-centered">
+    <div class="subTitle column is-two-fifths has-background-primary has-text-centered is-size-3" id="weather">
+      🌈 Weather
     </div>
 
-    <div class="column has-background-warning has-text-centered is-size-3">
-      Map
+    <div class="subTitle column has-background-warning has-text-centered is-size-3" id="map">
+      Map 🗺️
     </div>
   </div>
-  <div class="column is-4 is-offset-5">
+  <div class="column has-text-centered">
     <div class="options select is-danger is-rounded">
       <select class="stateInput">
         <option disabled selected hidden>Pick your state</option>
@@ -84,9 +85,10 @@
   <div class="card py-6 px-4 has-text-centered">
     <div class="weather">
       <img src="/assets/images/weatherImages/Atomosphere.png" alt="weather icon" class="weatherIcon">
-      <h1 class="temp has-text-weight-bold is-size-3-mobile is-size-1-desktop">°F</h1>
-      <h2 class="state is-size-2-desktop has-text-weight-bold">State Name</h2>
-      <div class="details columns is-flex-direction-row is-justify-content-space-between is-align-content-center mt-5 px-5">
+      <h1 class="temp has-text-weight-bold is-size-3-mobile is-size-1-tablet is-size-1-desktop">°F</h1>
+      <h2 class="state is-size-5-mobile is-size-1-tablet is-size-1-desktop has-text-weight-bold">State Name</h2>
+      <div
+        class="details columns is-flex-direction-row is-justify-content-space-between is-align-content-center mt-5 px-5">
         <div class="sub column has-text-left has-text-centered">
           <img src="/assets/images/weatherImages/Humidity.png" alt="test" class="mr-1 has-text-centered">
           <div>
