--- a/index.html
+++ b/index.html
@@ -81,21 +81,22 @@
     </div>
   </div>
 
+  <div style="display: flex; flex-direction: row;">
   <div class="card">
     <div class="weather">
-      <img src="/assets/images/weatherImages/Atomosphere.png" alt="weather icon" class="weatherIcon">
+      <img src="./assets/images/weatherImages/Atomosphere.png" alt="weather icon" class="weatherIcon">
       <h1 class="temp">°F</h1>
       <h2 class="state">State Name</h2>
       <div class="details">
         <div class="col">
-          <img src="/assets/images/weatherImages/Humidity.png" alt="test">
+          <img src="./assets/images/weatherImages/Humidity.png" alt="test">
           <div>
             <p class="humidity">%</p>
             <p>Humidity</p>
           </div>
         </div>
         <div class="col">
-          <img src="/assets/images/weatherImages/Wind.png" alt="test">
+          <img src="./assets/images/weatherImages/Wind.png" alt="test">
           <div>
             <p class="wind">mph</p>
             <p>Wind Speed</p>
@@ -103,8 +104,56 @@
         </div>
       </div>
     </div>
+  </div>
 
-    <script src="/assets/js/weatherScript.js"></script>
+    <div class="container">
+      <div id="map" class="column">
+        <div class="column is-three-fifths has-background-primary is-size-3">
+          <style>
+            #map {
+              height: 350px;
+              position: relative;
+              width: 100%;
+            }
+          </style>
+        </div>
+        
+        <script>
+        var NPMap = {
+          center: {
+            lat: 44.32,
+            lng: -110.42
+          },
+          div: 'map',
+          hooks: {
+            init: function (callback) {
+              var bounds = NPMap.config.L.getBounds();
+              window.L.npmap.layer.geojson({
+                attribution: '<a href="https://www.mapillary.com">Mapillary</a>',
+                popup: {
+                  description: '<img src="https://d1cuyjsrcm0gby.cloudfront.net/{{key}}/thumb-320.jpg" style="height:240px;width:320px;">'
+                },
+                url: 'https://a.mapillary.com/v2/search/im/geojson?client_id=REVmc0hVYk13NF82NDlGcDQ3VVI2Zzo1ZjljYTA2MTQ4NWI2ZjEx&max_lat=' + bounds.getNorth() + '&max_lon=' + bounds.getEast() + '&min_lat=' + bounds.getSouth() + '&min_lon=' + bounds.getWest() + '&limit=100&page=0'
+              }).addTo(NPMap.config.L);
+              callback();
+            }
+          },
+          zoom: 8
+        };
+
+        (function () {
+          var s = document.createElement('script');
+          s.src = 'https://www.nps.gov/lib/npmap.js/4.0.0/npmap-bootstrap.js';
+          document.body.appendChild(s);
+        })();
+
+      </script>
+    </div>
+  </div>
+
+
+    <script src="./assets/js/weatherScript.js"></script>
     <script src="./assets/js/NPSScript.js"></script>
 </body>
+
 </html>
