--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <h1 class="column has-background-success has-text-weight-bold is-size-1 has-text-centered has-text-white">✨ HikeME ✨</h1>
   <div class="columns is-mobile has-text-centered">
     <div class="subTitle column is-two-fifths has-background-primary has-text-centered is-size-3" id="weather">
-      🌈 Weather
+      Weather
     </div>
 
     <div class="subTitle column has-background-warning has-text-centered is-size-3" id="map">
-      Map 🗺️
+      Map
     </div>
   </div>
   <div class="column has-text-centered">
