--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       Map
     </div>
   </div>
-  <div class="column is-4 is-offset-5">
+  <div class="columns">
     <div class="options select is-danger is-rounded">
       <select class="stateInput">
         <option disabled selected hidden>Pick your state</option>
@@ -79,8 +79,9 @@
         <option>Wyoming</option>
       </select>
     </div>
-  </div>
+  
 
+  <div class="columns">
   <div class="card">
     <div class="weather">
       <img src="/assets/images/weatherImages/Atomosphere.png" alt="weather icon" class="weatherIcon">
@@ -100,9 +101,21 @@
             <p class="wind">mph</p>
             <p>Wind Speed</p>
           </div>
+          </div>
         </div>
       </div>
+  </div>
+  <div class="card"></div>
+    <div class="container">
+          <div class="has-background-grey-lighter column is-6 is-offset-5">
+            Parks in this State:
+            <div id="repo-container"></div>
+          </div>
     </div>
+  </div>
+</div>
+
+
 
     <script src="/assets/js/weatherScript.js"></script>
     <script src="./assets/js/NPSScript.js"></script>
