--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </div>
       </div>
 
-      <div class="container">
+      <div>
         <div id="map" class="column">
           <div class="column is-three-fifths has-background-primary is-size-3">
             <style>
