Final final changes

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               #map {
                 height: 350px;
                 position: relative;
-                width: 100%;
+                width: 500px;
               }
             </style>
           </div>
